--- a/index.html
+++ b/index.html
@@ -18,11 +18,26 @@
             />
           </div>
           <div class="formBx">
-            <form action="" onsubmit="">
+            <form action="" onsubmit="loginUser();">
               <h2>Sign In</h2>
-              <input type="email" id="uemail" name="uemail" placeholder="Enter Your Email" />
-              <input type="password" id="uPassword" name="uPassword" placeholder="Password" />
-              <input type="submit"  onsubmit="login();" name="SignIn" value="Login" />
+              <input
+                type="email"
+                id="uemail"
+                name="uemail"
+                placeholder="Enter Your Email"
+              />
+              <input
+                type="password"
+                id="uPassword"
+                name="uPassword"
+                placeholder="Password"
+              />
+              <input
+                type="submit"
+                onsubmit="loginUser();"
+                name="SignIn"
+                value="Sign in"
+              />
               <p class="signup">
                 Don't have an account ?
                 <a href="#" onclick="toggleForm();">Sign Up.</a>
@@ -65,7 +80,12 @@
                 oninput="verifyPassword(this)"
                 required
               />
-              <input type="submit" onsubmit="Store();" name="SignUp" value="Sign Up" />
+              <input
+                type="submit"
+                onsubmit="Store();"
+                name="SignUp"
+                value="Sign Up"
+              />
               <p class="signup">
                 Already have an account ?
                 <a href="#" onclick="toggleForm();">Sign in.</a>
